--- a/laterlist/src/main/res/layout/fragment_create_website.xml
+++ b/laterlist/src/main/res/layout/fragment_create_website.xml
@@ -40,6 +40,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:maxLines="1"
+            android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/create_website_url_tv"
             app:layout_constraintTop_toBottomOf="@id/create_website_center_text" />
@@ -59,6 +60,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:maxLines="1"
+            android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/create_folder_title_tv"
             app:layout_constraintTop_toBottomOf="@id/create_website_url_ev" />
