--- a/common/src/main/res/layout/chat_item.xml
+++ b/common/src/main/res/layout/chat_item.xml
@@ -58,5 +58,19 @@
         app:layout_constraintVertical_bias="0.5"
         android:background="?attr/selectableItemBackgroundBorderless"/>
 
+    <ImageView
+        android:id="@+id/finish_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="8dp"
+        android:src="@drawable/baseline_edit_24"
+        android:visibility="gone"
+        android:contentDescription="@string/edit_icon_description"
+        app:layout_constraintEnd_toStartOf="@id/delete_icon"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        android:background="?attr/selectableItemBackgroundBorderless"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
