--- a/notification/src/main/res/values/colors.xml
+++ b/notification/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="material_primary_color">#6200EE</color>
+    <color name="material_on_surface_emphasis_medium">#CCCCCC</color>
 </resources>
