--- a/profile/src/main/res/layout/fragment_profile.xml
+++ b/profile/src/main/res/layout/fragment_profile.xml
@@ -41,8 +41,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:clickable="true"
             app:cardCornerRadius="8dp"
             app:cardElevation="4dp"
+            android:foreground="?android:attr/selectableItemBackground"
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
@@ -86,16 +88,24 @@
 
         </androidx.cardview.widget.CardView>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="16dp"
-            android:id="@+id/settings_list"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:divider="@android:color/darker_gray"
-            android:dividerHeight="0.5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/user_info_card" />
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:cardCornerRadius="@dimen/cardView_radius"
+            app:layout_constraintTop_toBottomOf="@id/user_info_card"
+            android:clickable="true"
+            app:cardElevation="4dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:id="@+id/settings_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@android:color/darker_gray"
+                android:dividerHeight="0.5dp" />
+
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
