--- a/common/src/main/res/layout/later_item_website.xml
+++ b/common/src/main/res/layout/later_item_website.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
-    android:layout_margin="8dp"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="8dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
     android:foreground="?android:attr/selectableItemBackground">
