--- a/notification/src/main/res/layout/fragment_notification.xml
+++ b/notification/src/main/res/layout/fragment_notification.xml
@@ -54,6 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:src="@drawable/baseline_add_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
